Moves images to their own folder

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Lasgna</h1>
-    <img src="lasgna.jpg" height="400" width="600">
+    <img src="./images/lasgna.jpg" height="400" width="600">
     <p>A simple recipe that can be made in the 5 minutes between waking up and leaving.</p>
     <p>Simple and meat based, no seafood nonsense. Ideal for your regular orange cat. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, dolor tempore, necessitatibus commodi velit expedita quidem doloremque illum ipsam vitae quas explicabo enim quasi hic error! Totam, cum impedit. Voluptas.</p>
     <h2>Ingredients</h2>
