Adds second recipie - Pavlova

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -41,5 +41,6 @@
         <li>Ladle sauce (just enough to cover) into the bottom of a 9x13-inch baking dish. Layer sauce with three lasagna noodles, more sauce, ricotta mixture, and mozzarella mixture; repeat once more using all of remaining cheese mixtures. Layer with remaining three lasagna noodles and remaining sauce, then sprinkle Parmesan over top.</li>
         <li>Cover and bake in the preheated oven for 30 minutes. Uncover and continue to bake until cheese is melted and top is golden, about 15 minutes longer.</li>
     </ol>
+    <a href="../index.html">Return to Index</a>
 </body>
 </html>
