Adds thirds recipe - Mince Pie

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
         <li><a href="recipes/pavlova.html">Pavlova (NZ)</a></li>
+        <li><a href="recipes/mince-pie.html">Mince Pie - the lifeblood of NZ</a></li>
     </ul>
 </body>
 </html>
