Fixes typo in pavlova

--- a/recipes/pavlova.html
+++ b/recipes/pavlova.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Pavlova - Only From New Zealand</h1>
     <img src="./images/pavlova.jpeg" height="400" width="400">
-    <p>Australians try to claim it, but unfortunately for then, they're wrong.</p>
+    <p>Australians try to claim it, but unfortunately for them, they're wrong.</p>
     <p>In you like meringues, you'll love this desert, best with golden kiwi fruit</p>
     <h2>Ingredients</h2>
     <ul>
