--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index-styles.css">
     <title>TOP Lesson 1 - Recipe</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
-        <li><a href="recipes/pavlova.html">Pavlova (NZ)</a></li>
-        <li><a href="recipes/mince-pie.html">Mince Pie - the lifeblood of NZ</a></li>
+        <li class="hover-col"><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li class="hover-col"><a href="recipes/pavlova.html">Pavlova (NZ)</a></li>
+        <li class="hover-col"><a href="recipes/mince-pie.html">Mince Pie <span class="recipe-subtext">The lifeblood of NZ</span></a></li>
     </ul>
 </body>
 </html>
